[#194] - Eliminada modificacion endpoint.
